cypress-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cypress-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cypress-api
  template:
    metadata:
      labels:
        app: cypress-api
    spec:
      containers:
        - name: cypress-api
          image: agoldis/sorry-cypress-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: cypress-api
spec:
  ports:
    - port: 4000
  selector:
    app: cypress-api
