cypress-dashboard.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cypress-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cypress-dashboard
  template:
    metadata:
      labels:
        app: cypress-dashboard
    spec:
      containers:
        - name: cypress-dashboard
          image: agoldis/sorry-cypress-dashboard:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cypress-dashboard
spec:
  ports:
    - port: 8080
  selector:
    app: cypress-dashboard
