cypress-director.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cypress-director
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cypress-director
  template:
    metadata:
      labels:
        app: cypress-director
    spec:
      containers:
        - name: cypress-director
          image: agoldis/sorry-cypress-director:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 1234
---
apiVersion: v1
kind: Service
metadata:
  name: cypress-director
spec:
  ports:
    - port: 1234
  selector:
    app: cypress-director
