ingress-route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - cypress.<DOMAIN>.com
        - cypress-api.<DOMAIN>.com
        - cypress-director.<DOMAIN>.com
      secretName: tls-secret
  rules:
    - host: cypress.<DOMAIN>.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: cypress-dashboard
                port:
                  number: 8080
    - host: cypress-api.<DOMAIN>.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: cypress-api
                port:
                  number: 4000
    - host: cypress-director.<DOMAIN>.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: cypress-director
                port:
                  number: 1234
